# share-tui

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs
crates/watch/: Cargo.toml
crates/watch/examples/: audio_e2e.rs
crates/watch/src/: lib.rs
deploy/: Caddyfile  share-terminal-relay.service  tcast-relay.service
