[workspace]
resolver = "2"
members = ["crates/protocol", "crates/host", "crates/relay", "crates/watch", "crates/cli", "crates/audio"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["jeanpierrev20"]
repository = "https://github.com/EijunnN/tcast"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
