[package]
name = "host"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
crossterm = "0.29.0"
futures-util = "0.3.32"
portable-pty = "0.9.0"
protocol = { version = "0.1.0", path = "../protocol" }
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "sync", "signal", "net", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Storage_FileSystem"] }
